tests/fixtures/valid/escape_null.mmd
flowchart TD
    Start --> A[println 'hello\\0world']
    A --> End
