tests/fixtures/invalid/undefined_node.mmd
flowchart TD
    Start --> A[x = 1]
    A --> B
    B --> End
